RepositoryManager/src/server/parser/ScanPolicyParser.java
// $ANTLR 3.1 C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g 2008-11-17 18:44:06

package server.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class ScanPolicyParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CREDENTIALHEADER", "CREDENTIALEND", "PUBLICKEYHEADER", "BASE64BLOCK", "ID", "PUBLICKEYEND", "SIGNATUREHEADER", "SIGNATUREEND", "VALIDITYHEADER", "NOTBEFORE", "NOTAFTER", "VALIDITYEND", "NUM", "CERTHEADER", "CERTEND", "CHALLENGEHEADER", "CHALLENGEBLOCK", "CHALLENGEEND", "RESPONSEHEADER", "RESPONSEEND", "REQUESTHEADER", "REQUESTEND", "REPLYHEADER", "REPLYEND", "NEWLINE", "WS", "'datime'", "'('", "','", "')'", "'.'", "':-'"
    };
    public static final int REPLYHEADER=26;
    public static final int RESPONSEHEADER=22;
    public static final int SIGNATUREEND=11;
    public static final int PUBLICKEYEND=9;
    public static final int ID=8;
    public static final int NOTBEFORE=13;
    public static final int EOF=-1;
    public static final int CREDENTIALEND=5;
    public static final int NUM=16;
    public static final int VALIDITYHEADER=12;
    public static final int NOTAFTER=14;
    public static final int SIGNATUREHEADER=10;
    public static final int CERTEND=18;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=29;
    public static final int T__33=33;
    public static final int REPLYEND=27;
    public static final int T__34=34;
    public static final int CREDENTIALHEADER=4;
    public static final int NEWLINE=28;
    public static final int RESPONSEEND=23;
    public static final int T__35=35;
    public static final int VALIDITYEND=15;
    public static final int CERTHEADER=17;
    public static final int CHALLENGEHEADER=19;
    public static final int CHALLENGEBLOCK=20;
    public static final int PUBLICKEYHEADER=6;
    public static final int REQUESTHEADER=24;
    public static final int CHALLENGEEND=21;
    public static final int REQUESTEND=25;
    public static final int BASE64BLOCK=7;

    // delegates
    // delegators


        public ScanPolicyParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ScanPolicyParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[30+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ScanPolicyParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g"; }


    protected void mismatch(IntStream input, int ttype, BitSet follow) 
    	throws RecognitionException
    {
    	throw new MismatchedTokenException(ttype, input);
    }

    @Override
    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
    	throws RecognitionException
    {
    	throw e;
    }

    @Override
    protected Object recoverFromMismatchedToken(IntStream input, int ttype,
          BitSet follow) throws RecognitionException {
    	throw new RecognitionException();
    }


    public static class messageType_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "messageType"
    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:38:1: messageType : ( credential | request | response | reply );
    public final ScanPolicyParser.messageType_return messageType() throws RecognitionException {
        ScanPolicyParser.messageType_return retval = new ScanPolicyParser.messageType_return();
        retval.start = input.LT(1);
        int messageType_StartIndex = input.index();
        Object root_0 = null;

        ScanPolicyParser.credential_return credential1 = null;

        ScanPolicyParser.request_return request2 = null;

        ScanPolicyParser.response_return response3 = null;

        ScanPolicyParser.reply_return reply4 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:39:2: ( credential | request | response | reply )
            int alt1=4;
            switch ( input.LA(1) ) {
            case CREDENTIALHEADER:
                {
                alt1=1;
                }
                break;
            case REQUESTHEADER:
                {
                alt1=2;
                }
                break;
            case RESPONSEHEADER:
                {
                alt1=3;
                }
                break;
            case REPLYHEADER:
                {
                alt1=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:39:4: credential
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_credential_in_messageType56);
                    credential1=credential();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, credential1.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:40:4: request
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_request_in_messageType61);
                    request2=request();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, request2.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:41:4: response
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_response_in_messageType66);
                    response3=response();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, response3.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:42:4: reply
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_reply_in_messageType71);
                    reply4=reply();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, reply4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
         
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, messageType_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "messageType"

    public static class credential_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "credential"
    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:45:1: credential : CREDENTIALHEADER publicKey ( certificate )* CREDENTIALEND ;
    public final ScanPolicyParser.credential_return credential() throws RecognitionException {
        ScanPolicyParser.credential_return retval = new ScanPolicyParser.credential_return();
        retval.start = input.LT(1);
        int credential_StartIndex = input.index();
        Object root_0 = null;

        Token CREDENTIALHEADER5=null;
        Token CREDENTIALEND8=null;
        ScanPolicyParser.publicKey_return publicKey6 = null;

        ScanPolicyParser.certificate_return certificate7 = null;


        Object CREDENTIALHEADER5_tree=null;
        Object CREDENTIALEND8_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:46:2: ( CREDENTIALHEADER publicKey ( certificate )* CREDENTIALEND )
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:46:4: CREDENTIALHEADER publicKey ( certificate )* CREDENTIALEND
            {
            root_0 = (Object)adaptor.nil();

            CREDENTIALHEADER5=(Token)match(input,CREDENTIALHEADER,FOLLOW_CREDENTIALHEADER_in_credential84); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            CREDENTIALHEADER5_tree = (Object)adaptor.create(CREDENTIALHEADER5);
            adaptor.addChild(root_0, CREDENTIALHEADER5_tree);
            }
            pushFollow(FOLLOW_publicKey_in_credential86);
            publicKey6=publicKey();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, publicKey6.getTree());
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:46:31: ( certificate )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==CERTHEADER) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:0:0: certificate
            	    {
            	    pushFollow(FOLLOW_certificate_in_credential88);
            	    certificate7=certificate();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, certificate7.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            CREDENTIALEND8=(Token)match(input,CREDENTIALEND,FOLLOW_CREDENTIALEND_in_credential91); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            CREDENTIALEND8_tree = (Object)adaptor.create(CREDENTIALEND8);
            adaptor.addChild(root_0, CREDENTIALEND8_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
         
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, credential_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "credential"

    public static class publicKey_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "publicKey"
    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:48:1: publicKey : PUBLICKEYHEADER ( BASE64BLOCK | id1= ID {...}?)* PUBLICKEYEND ;
    public final ScanPolicyParser.publicKey_return publicKey() throws RecognitionException {
        ScanPolicyParser.publicKey_return retval = new ScanPolicyParser.publicKey_return();
        retval.start = input.LT(1);
        int publicKey_StartIndex = input.index();
        Object root_0 = null;

        Token id1=null;
        Token PUBLICKEYHEADER9=null;
        Token BASE64BLOCK10=null;
        Token PUBLICKEYEND11=null;

        Object id1_tree=null;
        Object PUBLICKEYHEADER9_tree=null;
        Object BASE64BLOCK10_tree=null;
        Object PUBLICKEYEND11_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:49:2: ( PUBLICKEYHEADER ( BASE64BLOCK | id1= ID {...}?)* PUBLICKEYEND )
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:49:4: PUBLICKEYHEADER ( BASE64BLOCK | id1= ID {...}?)* PUBLICKEYEND
            {
            root_0 = (Object)adaptor.nil();

            PUBLICKEYHEADER9=(Token)match(input,PUBLICKEYHEADER,FOLLOW_PUBLICKEYHEADER_in_publicKey102); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            PUBLICKEYHEADER9_tree = (Object)adaptor.create(PUBLICKEYHEADER9);
            adaptor.addChild(root_0, PUBLICKEYHEADER9_tree);
            }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:49:20: ( BASE64BLOCK | id1= ID {...}?)*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==BASE64BLOCK) ) {
                    alt3=1;
                }
                else if ( (LA3_0==ID) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:49:21: BASE64BLOCK
            	    {
            	    BASE64BLOCK10=(Token)match(input,BASE64BLOCK,FOLLOW_BASE64BLOCK_in_publicKey105); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    BASE64BLOCK10_tree = (Object)adaptor.create(BASE64BLOCK10);
            	    adaptor.addChild(root_0, BASE64BLOCK10_tree);
            	    }

            	    }
            	    break;
            	case 2 :
            	    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:49:33: id1= ID {...}?
            	    {
            	    id1=(Token)match(input,ID,FOLLOW_ID_in_publicKey109); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    id1_tree = (Object)adaptor.create(id1);
            	    adaptor.addChild(root_0, id1_tree);
            	    }
            	    if ( !(( !((String)id1.getText()).contains("-") || !((String)id1.getText()).contains("_"))) ) {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        throw new FailedPredicateException(input, "publicKey", " !((String)id1.getText()).contains(\"-\") || !((String)id1.getText()).contains(\"_\")");
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            PUBLICKEYEND11=(Token)match(input,PUBLICKEYEND,FOLLOW_PUBLICKEYEND_in_publicKey115); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            PUBLICKEYEND11_tree = (Object)adaptor.create(PUBLICKEYEND11);
            adaptor.addChild(root_0, PUBLICKEYEND11_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
         
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, publicKey_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "publicKey"

    public static class signature_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "signature"
    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:51:1: signature : SIGNATUREHEADER ( BASE64BLOCK | id1= ID {...}?)* SIGNATUREEND ;
    public final ScanPolicyParser.signature_return signature() throws RecognitionException {
        ScanPolicyParser.signature_return retval = new ScanPolicyParser.signature_return();
        retval.start = input.LT(1);
        int signature_StartIndex = input.index();
        Object root_0 = null;

        Token id1=null;
        Token SIGNATUREHEADER12=null;
        Token BASE64BLOCK13=null;
        Token SIGNATUREEND14=null;

        Object id1_tree=null;
        Object SIGNATUREHEADER12_tree=null;
        Object BASE64BLOCK13_tree=null;
        Object SIGNATUREEND14_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:52:2: ( SIGNATUREHEADER ( BASE64BLOCK | id1= ID {...}?)* SIGNATUREEND )
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:52:4: SIGNATUREHEADER ( BASE64BLOCK | id1= ID {...}?)* SIGNATUREEND
            {
            root_0 = (Object)adaptor.nil();

            SIGNATUREHEADER12=(Token)match(input,SIGNATUREHEADER,FOLLOW_SIGNATUREHEADER_in_signature126); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            SIGNATUREHEADER12_tree = (Object)adaptor.create(SIGNATUREHEADER12);
            adaptor.addChild(root_0, SIGNATUREHEADER12_tree);
            }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:52:20: ( BASE64BLOCK | id1= ID {...}?)*
            loop4:
            do {
                int alt4=3;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==BASE64BLOCK) ) {
                    alt4=1;
                }
                else if ( (LA4_0==ID) ) {
                    alt4=2;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:52:21: BASE64BLOCK
            	    {
            	    BASE64BLOCK13=(Token)match(input,BASE64BLOCK,FOLLOW_BASE64BLOCK_in_signature129); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    BASE64BLOCK13_tree = (Object)adaptor.create(BASE64BLOCK13);
            	    adaptor.addChild(root_0, BASE64BLOCK13_tree);
            	    }

            	    }
            	    break;
            	case 2 :
            	    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:52:33: id1= ID {...}?
            	    {
            	    id1=(Token)match(input,ID,FOLLOW_ID_in_signature133); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    id1_tree = (Object)adaptor.create(id1);
            	    adaptor.addChild(root_0, id1_tree);
            	    }
            	    if ( !(( !((String)id1.getText()).contains("-") || !((String)id1.getText()).contains("_"))) ) {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        throw new FailedPredicateException(input, "signature", " !((String)id1.getText()).contains(\"-\") || !((String)id1.getText()).contains(\"_\")");
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            SIGNATUREEND14=(Token)match(input,SIGNATUREEND,FOLLOW_SIGNATUREEND_in_signature139); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            SIGNATUREEND14_tree = (Object)adaptor.create(SIGNATUREEND14);
            adaptor.addChild(root_0, SIGNATUREEND14_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
         
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, signature_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "signature"

    public static class validity_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "validity"
    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:54:1: validity : VALIDITYHEADER NOTBEFORE timeTuple NOTAFTER timeTuple VALIDITYEND ;
    public final ScanPolicyParser.validity_return validity() throws RecognitionException {
        ScanPolicyParser.validity_return retval = new ScanPolicyParser.validity_return();
        retval.start = input.LT(1);
        int validity_StartIndex = input.index();
        Object root_0 = null;

        Token VALIDITYHEADER15=null;
        Token NOTBEFORE16=null;
        Token NOTAFTER18=null;
        Token VALIDITYEND20=null;
        ScanPolicyParser.timeTuple_return timeTuple17 = null;

        ScanPolicyParser.timeTuple_return timeTuple19 = null;


        Object VALIDITYHEADER15_tree=null;
        Object NOTBEFORE16_tree=null;
        Object NOTAFTER18_tree=null;
        Object VALIDITYEND20_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:55:2: ( VALIDITYHEADER NOTBEFORE timeTuple NOTAFTER timeTuple VALIDITYEND )
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:55:4: VALIDITYHEADER NOTBEFORE timeTuple NOTAFTER timeTuple VALIDITYEND
            {
            root_0 = (Object)adaptor.nil();

            VALIDITYHEADER15=(Token)match(input,VALIDITYHEADER,FOLLOW_VALIDITYHEADER_in_validity150); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            VALIDITYHEADER15_tree = (Object)adaptor.create(VALIDITYHEADER15);
            adaptor.addChild(root_0, VALIDITYHEADER15_tree);
            }
            NOTBEFORE16=(Token)match(input,NOTBEFORE,FOLLOW_NOTBEFORE_in_validity155); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NOTBEFORE16_tree = (Object)adaptor.create(NOTBEFORE16);
            adaptor.addChild(root_0, NOTBEFORE16_tree);
            }
            pushFollow(FOLLOW_timeTuple_in_validity157);
            timeTuple17=timeTuple();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, timeTuple17.getTree());
            NOTAFTER18=(Token)match(input,NOTAFTER,FOLLOW_NOTAFTER_in_validity159); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NOTAFTER18_tree = (Object)adaptor.create(NOTAFTER18);
            adaptor.addChild(root_0, NOTAFTER18_tree);
            }
            pushFollow(FOLLOW_timeTuple_in_validity161);
            timeTuple19=timeTuple();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, timeTuple19.getTree());
            VALIDITYEND20=(Token)match(input,VALIDITYEND,FOLLOW_VALIDITYEND_in_validity166); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            VALIDITYEND20_tree = (Object)adaptor.create(VALIDITYEND20);
            adaptor.addChild(root_0, VALIDITYEND20_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
         
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, validity_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "validity"

    public static class timeTuple_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "timeTuple"
    // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:59:1: timeTuple : 'datime' '(' NUM ',' NUM ',' NUM ',' NUM ',' NUM ',' NUM ')' '.' ;
    public final ScanPolicyParser.timeTuple_return timeTuple() throws RecognitionException {
        ScanPolicyParser.timeTuple_return retval = new ScanPolicyParser.timeTuple_return();
        retval.start = input.LT(1);
        int timeTuple_StartIndex = input.index();
        Object root_0 = null;

        Token string_literal21=null;
        Token char_literal22=null;
        Token NUM23=null;
        Token char_literal24=null;
        Token NUM25=null;
        Token char_literal26=null;
        Token NUM27=null;
        Token char_literal28=null;
        Token NUM29=null;
        Token char_literal30=null;
        Token NUM31=null;
        Token char_literal32=null;
        Token NUM33=null;
        Token char_literal34=null;
        Token char_literal35=null;

        Object string_literal21_tree=null;
        Object char_literal22_tree=null;
        Object NUM23_tree=null;
        Object char_literal24_tree=null;
        Object NUM25_tree=null;
        Object char_literal26_tree=null;
        Object NUM27_tree=null;
        Object char_literal28_tree=null;
        Object NUM29_tree=null;
        Object char_literal30_tree=null;
        Object NUM31_tree=null;
        Object char_literal32_tree=null;
        Object NUM33_tree=null;
        Object char_literal34_tree=null;
        Object char_literal35_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:60:2: ( 'datime' '(' NUM ',' NUM ',' NUM ',' NUM ',' NUM ',' NUM ')' '.' )
            // C:\\Preetam\\Work\\workspace\\RepositoryManager\\src\\server\\parser\\ScanPolicy.g:60:4: 'datime' '(' NUM ',' NUM ',' NUM ',' NUM ',' NUM ',' NUM ')' '.'
            {
            root_0 = (Object)adaptor.nil();
